# ModernMachineLearning

./: README.md  annotations.csv
NeuralNetworkWIP/: OCR_NN.ipynb  annotations.csv  neuralNetwork.ipynb  pyproject.toml  segment_preparation.ipynb  segments.csv  utils.py
NeuralNetworkWIP/.ipynb_checkpoints/: OCR_NN-checkpoint.ipynb  annotations-checkpoint.csv  neuralNetwork-checkpoint.ipynb
