[project]
name = "pmml-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Timon Alferink",email = "timon.alferink@rub.de"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "notebook (>=7.5.2,<8.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "torchvision (>=0.24.1,<0.25.0)"
]

[tool.poetry]
packages = [{include = "pmml_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
